--- a/README.org
+++ b/README.org
@@ -12,7 +12,7 @@
 
 ** Installation
 
-   Grab a script and execute it.  
+   Grab a script and execute it.
 
    This repo is also a [[https://nixos.wiki/wiki/Flakes][Nix Flake]].
    You can directly start a script with the following command if you have at least version 2.4 of [[https://nixos.org/][Nix]] installed:
@@ -20,7 +20,7 @@
    : $ nix run github:Deleh/ffutils#<script_name> -- --help
 
 ** Scripts
-   
+
 *** =ffconv=
     :properties:
     :custom_id: ffconv
@@ -52,19 +52,20 @@
          TO_FORMAT    To format
 
        OPTIONS
-         -d, --directory DIRECTORY  Convert files in DIRECTORY (default: current work d
-                                    irectory)
+         -h, --help                 Show this help message
+         -d, --directory DIRECTORY  Convert files in DIRECTORY (default: current work
+                                    directory)
          -k, --keep                 Keep original files
          -l, --list                 List files which match the FROM_FORMAT
-         -m, --move DIRECTORY       Move old files to DIRECTORY (omits --keep) (default
-                                    : )
+         -m, --move DIRECTORY       Move old files to DIRECTORY (omits --keep)
+                                    (default: )
 
        EXAMPLES
          ffconv mp3 opus               Convert all mp3 files to opus
-         ffconv -m trash mp4 mkv       Convert all mp4 to mkv and move the original one
-                                       s to './trash'
-         ffconv -d ~/music -l wma mp3  List all wma files from '~/music' and ask for co
-                                       nverting them to mp3
+         ffconv -m trash mp4 mkv       Convert all mp4 to mkv and move the original
+                                       ones to './trash'
+         ffconv -d ~/music -l wma mp3  List all wma files from '~/music' and ask for
+                                       converting them to mp3
      #+end_example
 
 *** =ffcut=
@@ -79,7 +80,7 @@
       Cutting file video.mp4
       The extracted part was saved to cutted_video.mp4
     #+end_example
-    
+
 **** Usage
 
      #+begin_example
@@ -91,14 +92,15 @@
          FILE  File which will be cutted
 
        OPTIONS
+         -h, --help                    Show this help message
          -f, --from TIMESTAMP/SECONDS  Extract from TIMESTAMP/SECONDS (default: 0)
-         -o, --out FILE                Save extracted part to FILE (default: cutted_<fi
-                                       lename>)
+         -o, --out FILE                Save extracted part to FILE (default:
+                                       cutted_<filename>)
          -t, --to TIMESTAMP/DURATION   Extract to TIMESTAMP/DURATION (default: end)
 
        EXAMPLES
-         ffcut -t 5 video.mp4 -o cut.webm         Extract the first five seconds of 'vi
-                                                  deo.mp4' to 'cut.webm'
-         ffcut -f 00:10:30 -t 00:14:15 video.mp4  Extract the part from 00:10:30 to 00:
-                                                  14:15 from 'video.mp4'
+         ffcut -t 5 video.mp4 -o cut.webm         Extract the first five seconds of
+                                                  'video.mp4' to 'cut.webm'
+         ffcut -f 00:10:30 -t 00:14:15 video.mp4  Extract the part from 00:10:30 to
+                                                  00:14:15 from 'video.mp4'
      #+end_example
